[tool.poetry]
name = "poetry-tips"
version = "0.4.0"
description = ""
authors = ["Ali Seylaneh", "aliseylaneh@gmail.com"]


[tool.poetry.dependencies]
python = "^3.10.12"
pika = "^1.3.2"
httpx = "^0.27.0"
tqdm = "^4.66.2"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
curio = "^1.6"
elasticsearch = "8.13.0"
aiohttp = "^3.9.5"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
